@@ -5,8 +5,8 @@ import de.photon.AACAdditionPro.ModuleType;
 import de.photon.AACAdditionPro.checks.ViolationModule;
 import de.photon.AACAdditionPro.user.User;
 import de.photon.AACAdditionPro.user.UserManager;
+import de.photon.AACAdditionPro.util.VerboseSender;
 import de.photon.AACAdditionPro.util.files.configs.Configs;
-import de.photon.AACAdditionPro.util.files.configs.LoadFromConfiguration;
 import de.photon.AACAdditionPro.util.mathematics.Hitbox;
 import de.photon.AACAdditionPro.util.mathematics.VectorUtils;
 import de.photon.AACAdditionPro.util.multiversion.ServerVersion;
@@ -25,8 +25,15 @@ import org.bukkit.event.player.PlayerGameModeChangeEvent;
 import org.bukkit.potion.PotionEffectType;
 import org.bukkit.util.Vector;
 
+import java.util.ArrayDeque;
 import java.util.ArrayList;
+import java.util.Deque;
 import java.util.List;
+import java.util.Set;
+import java.util.concurrent.ConcurrentHashMap;
+import java.util.concurrent.ExecutorService;
+import java.util.concurrent.Executors;
+import java.util.concurrent.TimeUnit;
 
 public class Esp implements ViolationModule
 {
@@ -34,8 +41,7 @@ public class Esp implements ViolationModule
     private double renderDistanceSquared = 0;
     private boolean hideAfterRenderDistance = true;
 
-    @LoadFromConfiguration(configPath = ".update_ticks")
-    private int update_ticks;
+    private int updateMillis;
 
     // The camera offset for 3rd person
     private static final double THIRD_PERSON_OFFSET = 5D;
@@ -45,7 +51,7 @@ public class Esp implements ViolationModule
     private static final double MAX_FOV = Math.toRadians(165D);
 
     // Use a LinkedList design for optimal storage usage as the amount of bypassed / spectator players cannot be estimated.
-    private final List<Pair> playerConnections = new ArrayList<>();
+    private final Deque<Pair> playerConnections = new ArrayDeque<>();
 
     private final PlayerInformationModifier fullHider = new PlayerHider();
     private final PlayerInformationModifier informationOnlyHider = new InformationObfuscator();
@@ -64,6 +70,8 @@ public class Esp implements ViolationModule
     public void subEnable()
     {
         // ---------------------------------------------------- Auto-configuration ----------------------------------------------------- //
+        final int updateTicks = AACAdditionPro.getInstance().getConfig().getInt(this.getConfigString() + ".update_ticks");
+        updateMillis = 50 * updateTicks;
 
         final YamlConfiguration spigot = Configs.SPIGOT.getConfigurationRepresentation().getYamlConfiguration();
         final ConfigurationSection worlds = spigot.getConfigurationSection("world-settings");
@@ -115,46 +123,50 @@ public class Esp implements ViolationModule
                             for (final User watched : users)
                             {
                                 // The watched player is also not in Spectator mode
-                                if (watched.getPlayer().getGameMode() != GameMode.SPECTATOR)
+                                if (watched.getPlayer().getGameMode() != GameMode.SPECTATOR &&
+                                    // The players are in the same world
+                                    observingUser.getPlayer().getWorld().getUID().equals(watched.getPlayer().getWorld().getUID()))
                                 {
-                                    playerConnections.add(new Pair(observingUser, watched));
+                                    playerConnections.addLast(new Pair(observingUser, watched));
                                 }
                             }
                         }
                     }
+
+                    final ExecutorService pairExecutor = Executors.newWorkStealingPool();
 
                     Pair pair;
                     while (!playerConnections.isEmpty())
                     {
                         // Automatically empty the playerConnections
                         // Remove last entry for performance
-                        pair = playerConnections.remove(playerConnections.size() - 1);
+                        pair = playerConnections.removeLast();
 
-                        // The Users are in the same world
-                        if (pair.usersOfPair[0].getPlayer().getWorld().equals(pair.usersOfPair[1].getPlayer().getWorld()))
-                        {
-                            final double pairDistanceSquared = pair.usersOfPair[0].getPlayer().getLocation().distanceSquared(pair.usersOfPair[1].getPlayer().getLocation());
+                        // The users are always in the same world (see abovel)
+                        final double pairDistanceSquared = pair.usersOfPair[0].getPlayer().getLocation().distanceSquared(pair.usersOfPair[1].getPlayer().getLocation());
 
+                        final Pair currentPair = pair;
+                        pairExecutor.execute(() -> {
                             // Less than 1 block distance
                             // Everything (smaller than 1)^2 will result in something smaller than 1
                             if (pairDistanceSquared < 1)
                             {
-                                updatePairHideMode(pair, HideMode.NONE);
+                                updatePairHideMode(currentPair, HideMode.NONE);
                                 return;
                             }
 
                             if (pairDistanceSquared > renderDistanceSquared)
                             {
-                                updatePairHideMode(pair, hideAfterRenderDistance ?
-                                                         HideMode.FULL :
-                                                         HideMode.NONE);
+                                updatePairHideMode(currentPair, hideAfterRenderDistance ?
+                                                                HideMode.FULL :
+                                                                HideMode.NONE);
                                 return;
                             }
 
                             for (byte b = 0; b <= 1; b++)
                             {
-                                final Player observer = pair.usersOfPair[b].getPlayer();
-                                final Player watched = pair.usersOfPair[1 - b].getPlayer();
+                                final Player observer = currentPair.usersOfPair[b].getPlayer();
+                                final Player watched = currentPair.usersOfPair[1 - b].getPlayer();
 
                                 // ------------------------- Can one Player see the other ? ------------------------- //
                                 boolean canSee;
@@ -165,9 +177,9 @@ public class Esp implements ViolationModule
                                     case MC188:
                                         canSee = false;
                                         break;
-                                    case MC110:
                                     case MC111:
                                     case MC112:
+                                    case MC113:
                                         canSee = watched.hasPotionEffect(PotionEffectType.GLOWING);
                                         break;
                                     default:
@@ -177,55 +189,62 @@ public class Esp implements ViolationModule
                                 // Not already able to see (due to e.g. glowing)
                                 if (!canSee &&
                                     // Not bypassed
-                                    !pair.usersOfPair[b].isBypassed() &&
+                                    !currentPair.usersOfPair[b].isBypassed() &&
                                     // Has not logged in recently to prevent bugs
-                                    !pair.usersOfPair[b].getLoginData().recentlyUpdated(0, 3000))
+                                    !currentPair.usersOfPair[b].getLoginData().recentlyUpdated(0, 3000))
                                 {
                                     //canSee = observer.hasLineOfSight(watched);
                                     final Vector[] cameraVectors = getCameraVectors(observer);
 
-                                    final Hitbox hitboxOfWatched = watched.isSneaking() ?
-                                                                   Hitbox.SNEAKING_PLAYER :
-                                                                   Hitbox.PLAYER;
+                                    // Get the Vectors of the hitbox to check.
+                                    final Vector[] watchedHitboxVectors = (watched.isSneaking() ?
+                                                                           Hitbox.ESP_SNEAKING_PLAYER :
+                                                                           Hitbox.ESP_PLAYER).getCalculationVectors(watched.getLocation(), true);
 
-                                    final Iterable<Vector> watchedHitboxVectors = hitboxOfWatched.getCalculationVectors(watched.getLocation(), true);
 
-                                    double lastIntersectionCache = 1;
+                                    // The distance of the intersections in the same block is equal as of the
+                                    // BlockIterator mechanics.
+                                    final Set<Double> lastIntersectionsCache = ConcurrentHashMap.newKeySet();
 
                                     for (int i = 0; i < cameraVectors.length; i++)
                                     {
-                                        final Vector perspective = cameraVectors[i];
-
                                         for (final Vector calculationVector : watchedHitboxVectors)
                                         {
-                                            //System.out.println("OwnVec: " + watcher.getEyeLocation().toVector() + " |Vector: " + vector);
-
-                                            final Location start = perspective.toLocation(observer.getWorld());
+                                            final Location start = cameraVectors[i].toLocation(observer.getWorld());
                                             // The resulting Vector
                                             // The camera is not blocked by non-solid blocks
                                             // Vector is intersecting with some blocks
-                                            final Vector between = calculationVector.clone().subtract(perspective);
+                                            //
+                                            // No cloning is needed here as the calculationVector is only used once.
+                                            final Vector between = calculationVector.subtract(cameraVectors[i]);
 
                                             // ---------------------------------------------- FOV ----------------------------------------------- //
-                                            Vector cameraRotation = observer.getLocation().getDirection();
+                                            final Vector cameraRotation = observer.getLocation().getDirection();
 
                                             // Exactly the opposite rotation for the front-view
                                             if (i == 1)
-                                            {
                                                 cameraRotation.multiply(-1);
-                                            }
 
                                             if (cameraRotation.angle(between) > MAX_FOV)
-                                            {
                                                 continue;
-                                            }
 
                                             // --------------------------------------- Normal Calculation --------------------------------------- //
 
-                                            if (VectorUtils.vectorIntersectsWithBlockAt(start, between, lastIntersectionCache))
+                                            boolean cacheHit = false;
+                                            for (Double length : lastIntersectionsCache)
                                             {
-                                                continue;
+                                                // Not yet cached.
+                                                if (length == 0)
+                                                    continue;
+
+                                                if (VectorUtils.vectorIntersectsWithBlockAt(start, between, length))
+                                                {
+                                                    cacheHit = true;
+                                                }
                                             }
+
+                                            if (cacheHit)
+                                                continue;
 
                                             final double intersect = VectorUtils.getDistanceToFirstIntersectionWithBlock(start, between);
 
@@ -236,37 +255,51 @@ public class Esp implements ViolationModule
                                                 break;
                                             }
 
-                                            lastIntersectionCache = intersect;
+                                            lastIntersectionsCache.add(intersect);
                                         }
                                     }
+
+                                    // No need to further calculate anything as the player can already be seen.
+                                    if (canSee)
+                                        break;
+
+
+                                    // Low probability to help after the camera view was changed. -> clearing
+                                    lastIntersectionsCache.clear();
                                 }
                                 else
                                 {
                                     canSee = true;
                                 }
 
-                                if (canSee)
-                                {
-                                    // Can see the other player
-                                    updateHideMode(pair.usersOfPair[b], pair.usersOfPair[1 - b].getPlayer(), HideMode.NONE);
-                                }
-                                else
-                                {
-                                    // Cannot see the other player
-                                    updateHideMode(pair.usersOfPair[b], pair.usersOfPair[1 - b].getPlayer(),
-                                                   // If the observed player is sneaking hide him fully
-                                                   pair.usersOfPair[1 - b].getPlayer().isSneaking() ?
-                                                   HideMode.FULL :
-                                                   HideMode.INFORMATION_ONLY);
-                                }
+                                updateHideMode(currentPair.usersOfPair[b], currentPair.usersOfPair[1 - b].getPlayer(),
+                                               // Is the user visible
+                                               canSee ?
+                                               HideMode.NONE :
+                                               // If the observed player is sneaking hide him fully
+                                               (currentPair.usersOfPair[1 - b].getPlayer().isSneaking() ?
+                                                HideMode.FULL :
+                                                HideMode.INFORMATION_ONLY));
+
+                                // No special HideMode here as of the players being in 2 different worlds to decrease CPU load.
                             }
-                        }
-                        // No special HideMode here as of the players being in 2 different worlds to decrease CPU load.
+                        });
                     }
 
+                    pairExecutor.shutdown();
 
+                    try
+                    {
+                        if (!pairExecutor.awaitTermination(updateMillis, TimeUnit.MILLISECONDS))
+                        {
+                            VerboseSender.getInstance().sendVerboseMessage("Could not finish ESP cycle. Please consider upgrading your hardware or increasing the update_ticks option in the config if this message appears in large quantities.", false, true);
+                        }
+                    } catch (InterruptedException e)
+                    {
+                        e.printStackTrace();
+                    }
                     // Update_Ticks: the refresh-rate of the check.
-                }, 0L, update_ticks);
+                }, 0L, updateTicks);
     }
 
     @EventHandler
@@ -282,11 +315,20 @@ public class Esp implements ViolationModule
                 return;
             }
 
-            user.getEspInformationData().hiddenPlayers.keySet().forEach(hiddenPlayer -> updateHideMode(user, hiddenPlayer, HideMode.NONE));
+            // Manually clear the EspInformationData for better performance.
+            for (Player hiddenPlayer : user.getEspInformationData().hiddenPlayers.keySet())
+            {
+                informationOnlyHider.unModifyInformation(user.getPlayer(), hiddenPlayer);
+                fullHider.unModifyInformation(user.getPlayer(), hiddenPlayer);
+            }
+            user.getEspInformationData().hiddenPlayers.clear();
         }
     }
 
-
+    /**
+     * @return an array of {@link Vector}s which represent the 3 different camera modes in minecraft, 1st person and the two
+     * 3rd person views.
+     */
     private static Vector[] getCameraVectors(final Player player)
     {
         /*
@@ -311,19 +353,25 @@ public class Esp implements ViolationModule
 
         // Do the Cameras intersect with Blocks
         // Get the length of the first intersection or 0 if there is none
-        final double frontIntersection = VectorUtils.getDistanceToFirstIntersectionWithBlock(eyeLocation, vectors[1]);
-        final double behindIntersection = VectorUtils.getDistanceToFirstIntersectionWithBlock(eyeLocation, vectors[2]);
 
-        // There is an intersection in the front-vector
-        if (frontIntersection != 0)
-        {
-            vectors[1].normalize().multiply(frontIntersection);
-        }
+        // [0] = frontIntersection
+        // [1] = behindIntersection
+        final double[] intersections = new double[]{
+                VectorUtils.getDistanceToFirstIntersectionWithBlock(eyeLocation, vectors[1]),
+                VectorUtils.getDistanceToFirstIntersectionWithBlock(eyeLocation, vectors[2])
+        };
 
-        // There is an intersection in the behind-vector
-        if (behindIntersection != 0)
+        for (int i = 0; i < intersections.length; i++)
         {
-            vectors[2].normalize().multiply(behindIntersection);
+            // There is an intersection
+            if (intersections[i] != 0)
+            {
+                // Now we need to make sure the vectors are not inside of blocks as the method above returns.
+                // The 0.05 factor makes sure that we are outside of the block and not on the edge.
+                intersections[i] -= 0.05 + (0.5 / Math.sin(vectors[i + 1].angle(vectors[i + 1].clone().setY(0))));
+                // Add the correct position.
+                vectors[i + 1].normalize().multiply(intersections[i]);
+            }
         }
 
         return vectors;
@@ -335,34 +383,37 @@ public class Esp implements ViolationModule
         updateHideMode(pair.usersOfPair[1], pair.usersOfPair[0].getPlayer(), hideMode);
     }
 
-    private void updateHideMode(final User observer, final Player object, final HideMode hideMode)
+    private synchronized void updateHideMode(final User observer, final Player object, final HideMode hideMode)
     {
-        if (observer.getEspInformationData().hiddenPlayers.get(object) != hideMode)
-        {
-            switch (hideMode)
+        // unModifyInformation and modifyInformation are not thread-safe.
+        Bukkit.getScheduler().runTask(AACAdditionPro.getInstance(), () -> {
+            if (observer.getEspInformationData().hiddenPlayers.get(object) != hideMode)
             {
-                case FULL:
-                    observer.getEspInformationData().hiddenPlayers.put(object, HideMode.FULL);
-                    // FULL: fullHider active, informationOnlyHider inactive
-                    informationOnlyHider.unModifyInformation(observer.getPlayer(), object);
-                    fullHider.modifyInformation(observer.getPlayer(), object);
-                    break;
-                case INFORMATION_ONLY:
-                    observer.getEspInformationData().hiddenPlayers.put(object, HideMode.INFORMATION_ONLY);
+                switch (hideMode)
+                {
+                    case FULL:
+                        observer.getEspInformationData().hiddenPlayers.put(object, HideMode.FULL);
+                        // FULL: fullHider active, informationOnlyHider inactive
+                        informationOnlyHider.unModifyInformation(observer.getPlayer(), object);
+                        fullHider.modifyInformation(observer.getPlayer(), object);
+                        break;
+                    case INFORMATION_ONLY:
+                        observer.getEspInformationData().hiddenPlayers.put(object, HideMode.INFORMATION_ONLY);
 
-                    // INFORMATION_ONLY: fullHider inactive, informationOnlyHider active
-                    informationOnlyHider.modifyInformation(observer.getPlayer(), object);
-                    fullHider.unModifyInformation(observer.getPlayer(), object);
-                    break;
-                case NONE:
-                    observer.getEspInformationData().hiddenPlayers.remove(object);
+                        // INFORMATION_ONLY: fullHider inactive, informationOnlyHider active
+                        informationOnlyHider.modifyInformation(observer.getPlayer(), object);
+                        fullHider.unModifyInformation(observer.getPlayer(), object);
+                        break;
+                    case NONE:
+                        observer.getEspInformationData().hiddenPlayers.remove(object);
 
-                    // NONE: fullHider inactive, informationOnlyHider inactive
-                    informationOnlyHider.unModifyInformation(observer.getPlayer(), object);
-                    fullHider.unModifyInformation(observer.getPlayer(), object);
-                    break;
+                        // NONE: fullHider inactive, informationOnlyHider inactive
+                        informationOnlyHider.unModifyInformation(observer.getPlayer(), object);
+                        fullHider.unModifyInformation(observer.getPlayer(), object);
+                        break;
+                }
             }
-        }
+        });
     }
 
     @Override
